--- a/zed/settings.json
+++ b/zed/settings.json
@@ -24,6 +24,11 @@
 		"light": "One Dark",
 		"dark": "One Dark"
 	},
+	"git": {
+		"inline_blame": {
+			"enabled": false
+		}
+	},
 	"autosave": "on_focus_change",
 	"private_files": [],
 	"file_scan_exclusions": [
