--- a/zed/settings.json
+++ b/zed/settings.json
@@ -178,7 +178,7 @@
 	},
 	"tab_bar": {
 		"show_nav_history_buttons": false,
-  "show": true,
+  "show": false,
 		"show_tab_bar_buttons": true
 	}
 }
